--- a/css/t1.html
+++ b/css/t1.html
@@ -12,7 +12,7 @@
             color: green;
         }
 
-        div[xx] {
+        div[xx].a2 {
             color: blue;
         }
 
@@ -22,6 +22,10 @@
 
 <div id="a1" class="a2" xx="xx">test</div>
 
+
+<div class="col-xs-2">
+    <div class="col-xs-10">abc</div>
+</div>
 
 
 <!--
